[package]
name = "restart-fix"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["std"] }
flume = "0.11.0"
native-dialog = "0.6.4"
oneshot = "0.1.6"
system_shutdown = "4.0.1"
winsafe = { version = "0.0.17", features = ["gui", "kernel"] }
